--- a/index.html
+++ b/index.html
@@ -12,11 +12,24 @@
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </head>
 
-<body>
+<body background="assets/images/low_contrast_linen.png">
+
 
 	<div id="button-area"> </div>
 
 	<div id="gif-area"> </div>
+
+
+
+	<form id="anime-form">
+
+      <label for="anime-input">Add an Anime</label>
+
+      <input type="text" id="anime-input"><br>
+
+      <input id="add-anime" type="submit" value="Add an Anime">
+
+    </form>
 
 </body>
 </html>
